--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,46 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
-template: splash
-hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
-  actions:
-    - text: Example Guide
-      link: /guides/example/
-      icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
+title: Hajj Guide
+description: Why Hajj matters, what this guide covers, and how to use it.
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+Hajj is not just a journey across lands—it is a journey within.
 
-## Next steps
+This guide is designed to serve two types of readers:
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
-</CardGrid>
+- 🧳 **The first-time pilgrim** looking for a simple, practical manual.
+- 📖 **The returning pilgrim or student of knowledge** who wants a reliable, quick-reference resource.
+
+## Purpose of this Guide
+
+Too many Hajj books are either too long or too vague. This one aims to be:
+
+- ✅ **Concise** — no fluff, just what you need
+- 📌 **Skimmable** — clean headings and bullet points for quick reference
+- 🧠 **Actionable** — each step clearly explains *what*, *why*, and *how*
+- 💭 **Reflective** — not just logistics, but also spiritual grounding
+
+## What is Hajj?
+
+Hajj is the fifth pillar of Islam—an obligation upon every Muslim who is physically and financially able, once in their lifetime.
+
+> **“And [due] to Allah from the people is a pilgrimage to the House—for whoever is able to find thereto a way.”**  
+> — _Surah Aal Imran 3:97_
+
+It commemorates the legacy of Ibrahim (عليه السلام), the sacrifice, the surrender, and ultimately the return to Allah.
+
+## What This Guide Covers
+
+- Planning & preparation (before you go)
+- Step-by-step rituals with day-by-day breakdowns
+- Duas, tips, and checklists
+- Common pitfalls and how to handle them
+- Reflections for after you return
+
+## How to Use This Guide
+
+- Use the **sidebar** to jump to specific days or topics
+- Tap on **checklists and tips** when planning
+- Come back to the **ritual breakdowns** when you're on the ground
+- Skim the **FAQs** if something goes wrong
+
+This guide works great offline—consider saving the page or exporting as a PDF before you travel.
